--- a/kutsuHarjoitus.html
+++ b/kutsuHarjoitus.html
@@ -1,7 +1,7 @@
 <! DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <script type="text/javascript" src="koodausHaaste2.js">
+    <script type="text/javascript" src="js/koodausHaaste2.js">
     </script>
     <title>JavaScriptin kutsu harjoitus</title>
   </head>
