--- a/heippaMaailma.html
+++ b/heippaMaailma.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <script src="maailma.js"></script>
+    <script src="js/maailma.js"></script>
     <title>Heippa maailma</title>
   </head>
   <body>
