--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="ehtolauseita.css">
-    <script type="text/javascript" src="ehtolauseita.js">
+    <link rel="stylesheet" href="css/2viikontehtavat.css">
+    <script type="text/javascript" src="js/2viikonTehtavat.js">
 
     </script>
   </head>
