--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -14,8 +14,8 @@
     <p>Tee ohjelma, joka pyytää käyttäjältä
     kolmea numeroa ja laittaa ne järjestykseen</p>
     <form class="" action="index.html" method="post">
-      <p>Anna 1. numero: <input type="text" id="eka" value=""></p>
-      <p>Anna 2. numero: <input type="text" id="toka" value=""></p>
+      <p>Anna 1. numero: <input type="text" id="ensimmainen" value=""></p>
+      <p>Anna 2. numero: <input type="text" id="toinen" value=""></p>
       <p>Anna 3. numero: <input type="text" id="kolmas" value=""></p>
       <button type="button" name="button" onclick="jarjesta()">Järjestä luvut</button>
     </form>
