--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -51,9 +51,9 @@
       <p>Kirjoita ohjelma, joka kääntää "Hei maailma" - tekstin valitulle kielelle (englanti, ruotsi, espanja)</p>
     <p>Valitse kieli</p>
     <select class="" id="kieli">
-      <option value="eng">Englanti</option>
-      <option value="swe">Ruotsi</option>
-      <option value="esp">Espanja</option>
+      <option value="en">Englanti</option>
+      <option value="sw">Ruotsi</option>
+      <option value="es">Espanja</option>
     </select>
     <button type="button" id="button" onclick="kaanna()">Käännä</button>
 </html>
