--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -10,9 +10,8 @@
   </head>
   <body>
     <article class='vieri' id='yksi'>
-    <h1>Tehtävä 1</h1>
-    <p>Tee ohjelma, joka pyytää käyttäjältä
-    kolmea numeroa ja laittaa ne järjestykseen</p>
+    <h1>Numerot suuruusjärjestykseen</h1>
+    <p>Anna taulukkoon kolme erisuurta lukua</p>
     <form class="" action="index.html" method="post">
       <p>Anna 1. numero: <input type="text" id="ensimmainen" value=""></p>
       <p>Anna 2. numero: <input type="text" id="toinen" value=""></p>
@@ -21,8 +20,8 @@
     </form>
   </article>
   <article  class='vieri' id='kaksi'>
-    <h1>Tehtävä 2</h1>
-    <p>Kirjoita ohjelma, joka ottaa vastaan 5 lukua ja etsii niistä suurimman</p>
+    <h1>Suurin luku?</h1>
+    <p>Anna taulukkoon viisi eri lukua</p>
     <form class="" action="index.html" method="post">
       <p>Anna 1. luku: <input type="text" id="luku1" value=""></p>
       <p>Anna 2. luku: <input type="text" id="luku2" value=""></p>
@@ -33,22 +32,22 @@
     </form>
   </article>
   <article  class='vieri' id='kolme'>
-    <h1>Tehtävä 3</h1>
-    <p>Kirjoita ohjelma, joka kertoo, onko antamasi luku parillinen vai pariton</p>
+    <h1>Parillinen vai pariton luku?</h1>
+    <p>Syötä kenttään jokin luku</p>
     <p>Anna luku: <input type="text" id="luku" value=""></p>
     <button type="button" name="button" onclick="paritonParillinen()">Tarkista</button>
   </article>
   <article  class='vieri' id='nelja'>
-    <h1>Tehtävä 4</h1>
-    <p>Kirjoita ohjelma, joka kysyy käyttäjän ikää ja tarkistaa, mitä ajoneuvoa saa ajaa: <16v - polkupyörää, <18v - mopoa, muutoin autoa</p>
+    <h1>Ajo-oikeus</h1>
+    <p>Syötä ikäsi, katsotaan mitä ajoneuvoa saat ajaa: <16v - polkupyörää, <18v - mopoa, muutoin autoa</p>
       <form class="" action="index.html" method="post">
         <p>Anna käyttäjän ikä: <input type="text" id="ika" value=""></p>
         <button type="button" name="button" onclick="ajoneuvo()">Näytä ajoneuvo</button>
       </form>
     </article>
     <article  class='vieri' id='viisi'>
-    <h1>Tehtävä 5</h1>
-      <p>Kirjoita ohjelma, joka kääntää "Hei maailma" - tekstin valitulle kielelle (englanti, ruotsi, espanja)</p>
+    <h1>Käännös</h1>
+      <p>Käännetään lausahdus "Hei maailma!"</p>
     <p>Valitse kieli</p>
     <select class="" id="kieli">
       <option value="en">Englanti</option>
