--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -39,16 +39,16 @@
   </article>
   <article  class='vieri' id='nelja'>
     <h1>Ajo-oikeus</h1>
-    <p>Syötä ikäsi, katsotaan mitä ajoneuvoa saat ajaa: <16v - polkupyörää, <18v - mopoa, muutoin autoa</p>
+    <p>Syötä ikäsi, niin katsotaan mitä ajoneuvoa saat ajaa: <16v - polkupyörää, <18v - mopoa, muutoin autoa</p>
       <form class="" action="index.html" method="post">
-        <p>Anna käyttäjän ikä: <input type="text" id="ika" value=""></p>
+        <p>Anna ikäsi: <input type="text" id="ika" value=""></p>
         <button type="button" name="button" onclick="ajoneuvo()">Näytä ajoneuvo</button>
       </form>
     </article>
     <article  class='vieri' id='viisi'>
     <h1>Käännös</h1>
       <p>Käännetään lausahdus "Hei maailma!"</p>
-    <p>Valitse kieli</p>
+    <p>Valitse haluamasi kieli</p>
     <select class="" id="kieli">
       <option value="en">Englanti</option>
       <option value="sw">Ruotsi</option>
