--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -9,7 +9,7 @@
     </script>
   </head>
   <body>
-    <article class='vieri' id='yksi'>
+    <article class='page' id='yksi'>
     <h1>Numerot suuruusjärjestykseen</h1>
     <p>Anna taulukkoon kolme erisuurta lukua</p>
     <form class="" action="index.html" method="post">
@@ -19,7 +19,7 @@
       <button type="button" name="button" onclick="jarjesta()">Järjestä luvut</button>
     </form>
   </article>
-  <article  class='vieri' id='kaksi'>
+  <article  class='page' id='kaksi'>
     <h1>Suurin luku?</h1>
     <p>Anna taulukkoon viisi eri lukua</p>
     <form class="" action="index.html" method="post">
@@ -31,13 +31,13 @@
       <button type="button" name="button" onclick="etsiSuurin()">Etsi suurin numero</button>
     </form>
   </article>
-  <article  class='vieri' id='kolme'>
+  <article  class='page' id='kolme'>
     <h1>Parillinen vai pariton luku?</h1>
     <p>Syötä kenttään jokin luku</p>
     <p>Anna luku: <input type="text" id="luku" value=""></p>
     <button type="button" name="button" onclick="paritonParillinen()">Tarkista</button>
   </article>
-  <article  class='vieri' id='nelja'>
+  <article  class='page' id='nelja'>
     <h1>Ajo-oikeus</h1>
     <p>Syötä ikäsi, niin katsotaan mitä ajoneuvoa saat ajaa: <16v - polkupyörää, <18v - mopoa, muutoin autoa</p>
       <form class="" action="index.html" method="post">
@@ -45,7 +45,7 @@
         <button type="button" name="button" onclick="ajoneuvo()">Näytä ajoneuvo</button>
       </form>
     </article>
-    <article  class='vieri' id='viisi'>
+    <article  class='page' id='viisi'>
     <h1>Käännös</h1>
       <p>Käännetään lausahdus "Hei maailma!"</p>
     <p>Valitse haluamasi kieli</p>
