--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -9,17 +9,17 @@
     </script>
   </head>
   <body>
-    <article class='page' id='yksi'>
+    <article class='page' id='one'>
     <h1>Numerot suuruusjärjestykseen</h1>
     <p>Anna taulukkoon kolme erisuurta lukua</p>
     <form class="" action="index.html" method="post">
-      <p>Anna 1. numero: <input type="text" id="ensimmainen" value=""></p>
-      <p>Anna 2. numero: <input type="text" id="toinen" value=""></p>
-      <p>Anna 3. numero: <input type="text" id="kolmas" value=""></p>
+      <p>Anna 1. numero: <input type="text" id="first" value=""></p>
+      <p>Anna 2. numero: <input type="text" id="second" value=""></p>
+      <p>Anna 3. numero: <input type="text" id="third" value=""></p>
       <button type="button" name="button" onclick="jarjesta()">Järjestä luvut</button>
     </form>
   </article>
-  <article  class='page' id='kaksi'>
+  <article  class='page' id='two'>
     <h1>Suurin luku?</h1>
     <p>Anna taulukkoon viisi eri lukua</p>
     <form class="" action="index.html" method="post">
@@ -31,13 +31,13 @@
       <button type="button" name="button" onclick="etsiSuurin()">Etsi suurin numero</button>
     </form>
   </article>
-  <article  class='page' id='kolme'>
+  <article  class='page' id='tree'>
     <h1>Parillinen vai pariton luku?</h1>
     <p>Syötä kenttään jokin luku</p>
     <p>Anna luku: <input type="text" id="luku" value=""></p>
     <button type="button" name="button" onclick="paritonParillinen()">Tarkista</button>
   </article>
-  <article  class='page' id='nelja'>
+  <article  class='page' id='four'>
     <h1>Ajo-oikeus</h1>
     <p>Syötä ikäsi, niin katsotaan mitä ajoneuvoa saat ajaa: <16v - polkupyörää, <18v - mopoa, muutoin autoa</p>
       <form class="" action="index.html" method="post">
@@ -45,7 +45,7 @@
         <button type="button" name="button" onclick="ajoneuvo()">Näytä ajoneuvo</button>
       </form>
     </article>
-    <article  class='page' id='viisi'>
+    <article  class='page' id='five'>
     <h1>Käännös</h1>
       <p>Käännetään lausahdus "Hei maailma!"</p>
     <p>Valitse haluamasi kieli</p>
