--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -16,7 +16,7 @@
       <p>Anna 1. numero: <input type="text" id="first" value=""></p>
       <p>Anna 2. numero: <input type="text" id="second" value=""></p>
       <p>Anna 3. numero: <input type="text" id="third" value=""></p>
-      <button type="button" name="button" onclick="jarjesta()">Järjestä luvut</button>
+      <button type="button" name="button" onclick="jarjestaNumerot()">Järjestä luvut</button>
     </form>
   </article>
   <article  class='page' id='two'>
@@ -28,7 +28,7 @@
       <p>Anna 3. luku: <input type="text" id="luku3" value=""></p>
       <p>Anna 4. luku: <input type="text" id="luku4" value=""></p>
       <p>Anna 5. luku: <input type="text" id="luku5" value=""></p>
-      <button type="button" name="button" onclick="etsiSuurin()">Etsi suurin numero</button>
+      <button type="button" name="button" onclick="suurinLuku()">Etsi suurin</button>
     </form>
   </article>
   <article  class='page' id='tree'>
@@ -42,7 +42,7 @@
     <p>Syötä ikäsi, niin katsotaan mitä ajoneuvoa saat ajaa: <16v - polkupyörää, <18v - mopoa, muutoin autoa</p>
       <form class="" action="index.html" method="post">
         <p>Anna ikäsi: <input type="text" id="ika" value=""></p>
-        <button type="button" name="button" onclick="ajoneuvo()">Näytä ajoneuvo</button>
+        <button type="button" name="button" onclick="ajoOikeus()">Näytä ajoneuvo</button>
       </form>
     </article>
     <article  class='page' id='five'>
@@ -54,5 +54,5 @@
       <option value="sw">Ruotsi</option>
       <option value="es">Espanja</option>
     </select>
-    <button type="button" id="button" onclick="kaanna()">Käännä</button>
+    <button type="button" id="button" onclick="kaantaja()">Käännä</button>
 </html>
