--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -9,7 +9,7 @@
     </script>
   </head>
   <body>
-    <article class='page' id='one'>
+    <article class='article' id='one'>
     <h1>Numerot suuruusjärjestykseen</h1>
     <p>Anna taulukkoon kolme erisuurta lukua</p>
     <form class="" action="index.html" method="post">
@@ -19,7 +19,7 @@
       <button type="button" name="button" onclick="jarjestaNumerot()">Järjestä luvut</button>
     </form>
   </article>
-  <article  class='page' id='two'>
+  <article  class='article' id='two'>
     <h1>Suurin luku?</h1>
     <p>Anna taulukkoon viisi eri lukua</p>
     <form class="" action="index.html" method="post">
@@ -31,13 +31,13 @@
       <button type="button" name="button" onclick="suurinLuku()">Etsi suurin</button>
     </form>
   </article>
-  <article  class='page' id='tree'>
+  <article  class='article' id='tree'>
     <h1>Parillinen vai pariton luku?</h1>
     <p>Syötä kenttään jokin luku</p>
     <p>Anna luku: <input type="text" id="luku" value=""></p>
     <button type="button" name="button" onclick="paritonParillinen()">Tarkista</button>
   </article>
-  <article  class='page' id='four'>
+  <article  class='article' id='four'>
     <h1>Ajo-oikeus</h1>
     <p>Syötä ikäsi, niin katsotaan mitä ajoneuvoa saat ajaa: <16v - polkupyörää, <18v - mopoa, muutoin autoa</p>
       <form class="" action="index.html" method="post">
@@ -45,11 +45,11 @@
         <button type="button" name="button" onclick="ajoOikeus()">Näytä ajoneuvo</button>
       </form>
     </article>
-    <article  class='page' id='five'>
+    <article  class='article' id='five'>
     <h1>Käännös</h1>
       <p>Käännetään lausahdus "Hei maailma!"</p>
     <p>Valitse haluamasi kieli</p>
-    <select class="" id="kieli">
+    <select class="" id="lanquage">
       <option value="en">Englanti</option>
       <option value="sw">Ruotsi</option>
       <option value="es">Espanja</option>
