--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -49,7 +49,7 @@
     <h1>Käännös</h1>
       <p>Käännetään lausahdus "Hei maailma!"</p>
     <p>Valitse haluamasi kieli</p>
-    <select class="" id="lanquage">
+    <select class="" id="language">
       <option value="en">Englanti</option>
       <option value="sw">Ruotsi</option>
       <option value="es">Espanja</option>
