--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -8,7 +8,7 @@
 
     </script>
   </head>
-  <body>
+  <body class='page'>
     <article class='article' id='one'>
     <h1>Numerot suuruusjärjestykseen</h1>
     <p>Anna taulukkoon kolme erisuurta lukua</p>
@@ -55,4 +55,5 @@
       <option value="es">Espanja</option>
     </select>
     <button type="button" id="button" onclick="kaantaja()">Käännä</button>
+  </body>
 </html>
