--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -11,7 +11,7 @@
   <body class='page'>
     <article class='article' id='one'>
     <h1>Numerot suuruusjärjestykseen</h1>
-    <p>Anna taulukkoon kolme erisuurta lukua</p>
+    <p>Anna taulukkoon kolme eri lukua</p>
     <form class="" action="index.html" method="post">
       <p>Anna 1. numero: <input type="text" id="first" value=""></p>
       <p>Anna 2. numero: <input type="text" id="second" value=""></p>
