--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -55,5 +55,7 @@
       <option value="es">Espanja</option>
     </select>
     <button type="button" id="button" onclick="kaantaja()">Käännä</button>
+    <footer class='footer'>
+    </footer>
   </body>
 </html>
