--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -56,6 +56,10 @@
     </select>
     <button type="button" id="button" onclick="kaantaja()">Käännä</button>
     <footer class='footer'>
+      <br>
+      <p>Toisen viikon ensimmäiset tehtävät by MPO</p>
+      <br>
+      <br>
     </footer>
   </body>
 </html>
