--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -55,6 +55,7 @@
       <option value="es">Espanja</option>
     </select>
     <button type="button" id="button" onclick="kaantaja()">Käännä</button>
+  </article>
     <footer class='footer'>
       <br>
       <p>Toisen viikon ensimmäiset tehtävät by MPO</p>
