changed .page to .body

--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -8,7 +8,7 @@
 
     </script>
   </head>
-  <body class='page'>
+  <body class='body'>
     <article class='article' id='one'>
     <h1>Numerot suuruusjärjestykseen</h1>
     <p>Anna taulukkoon kolme eri lukua</p>
@@ -57,6 +57,7 @@
     <button type="button" id="button" onclick="kaantaja()">Käännä</button>
   </article>
     <footer class='footer'>
+      <br>
       <br>
       <p>Toisen viikon ensimmäiset tehtävät by MPO</p>
       <br>
