--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -59,7 +59,7 @@
     <footer class='footer'>
       <br>
       <br>
-      <p>Toisen viikon ensimmäiset tehtävät by MPO</p>
+      <p>Toisen viikon tehtävät by MPO</p>
       <br>
       <br>
     </footer>
