--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -39,7 +39,7 @@
   </article>
   <article  class='article' id='four'>
     <h1>Ajo-oikeus</h1>
-    <p>Syötä ikäsi, niin katsotaan mitä ajoneuvoa saat ajaa: <16v - polkupyörää, <18v - mopoa, muutoin autoa</p>
+    <p>Syötä ikäsi, niin katsotaan mitä ajoneuvoa saat ajaa, polkupyörää, mopoa vaiko autoa</p>
       <form class="" action="index.html" method="post">
         <p>Anna ikäsi: <input type="text" id="ika" value=""></p>
         <button type="button" name="button" onclick="ajoOikeus()">Näytä ajoneuvo</button>
