--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -8,7 +8,7 @@
 
     </script>
   </head>
-  <body class='body'>
+  <body class='body' background="code-background.jpg">
     <article class='article' id='one'>
     <h1>Numerot suuruusjärjestykseen</h1>
     <p>Anna taulukkoon kolme eri lukua</p>
