edited background image

--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -2,13 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Toisen viikon tehtävät</title>
     <link rel="stylesheet" href="css/2viikontehtavat.css">
     <script type="text/javascript" src="js/2viikonTehtavat.js">
 
     </script>
   </head>
-  <body class='body' background="code-background.jpg">
+  <body class='body' background="image/code-background.jpg">
     <article class='article' id='one'>
     <h1>Numerot suuruusjärjestykseen</h1>
     <p>Anna taulukkoon kolme eri lukua</p>
