edited title and h1

--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -9,8 +9,9 @@
     </script>
   </head>
   <body class='body' background="image/code-background.jpg">
+    <center><h1 style="color:white">Toisen viikon tehtävät</h1></center>
     <article class='article' id='one'>
-    <h1>Numerot suuruusjärjestykseen</h1>
+    <h2>Numerot suuruusjärjestykseen</h2>
     <p>Anna taulukkoon kolme eri lukua</p>
     <form class="" action="index.html" method="post">
       <p>Anna 1. numero: <input type="text" id="first" value=""></p>
@@ -20,7 +21,7 @@
     </form>
   </article>
   <article  class='article' id='two'>
-    <h1>Suurin luku?</h1>
+    <h2>Suurin luku?</h2>
     <p>Anna taulukkoon viisi eri lukua</p>
     <form class="" action="index.html" method="post">
       <p>Anna 1. luku: <input type="text" id="luku1" value=""></p>
@@ -32,13 +33,13 @@
     </form>
   </article>
   <article  class='article' id='tree'>
-    <h1>Parillinen vai pariton luku?</h1>
+    <h1>Parillinen vai pariton luku?</h2>
     <p>Syötä kenttään jokin luku</p>
     <p>Anna luku: <input type="text" id="luku" value=""></p>
     <button type="button" name="button" onclick="paritonParillinen()">Tarkista</button>
   </article>
   <article  class='article' id='four'>
-    <h1>Ajo-oikeus</h1>
+    <h2>Ajo-oikeus</h2>
     <p>Syötä ikäsi, niin katsotaan mitä ajoneuvoa saat ajaa, polkupyörää, mopoa vaiko autoa</p>
       <form class="" action="index.html" method="post">
         <p>Anna ikäsi: <input type="text" id="ika" value=""></p>
@@ -46,7 +47,7 @@
       </form>
     </article>
     <article  class='article' id='five'>
-    <h1>Käännös</h1>
+    <h2>Käännös</h2>
       <p>Käännetään lausahdus "Hei maailma!"</p>
     <p>Valitse haluamasi kieli</p>
     <select class="" id="language">
