--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -9,7 +9,7 @@
     </script>
   </head>
   <body class='body' background="image/code-background.jpg">
-    <center><h1 style="color:white">Toisen viikon tehtävät</h1></center>
+    <center><h1 style="color:white; font-size:48px">Toisen viikon tehtävät</h1></center>
     <article class='article' id='one'>
     <h2>Numerot suuruusjärjestykseen</h2>
     <p>Anna taulukkoon kolme eri lukua</p>
