--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -60,7 +60,7 @@
     <footer class='footer'>
       <br>
       <br>
-      <p style="color:white;">Toisen viikon tehtävät by MPO</p>
+      <p style="color:lightgray;">Toisen viikon tehtävät by MPO</p>
       <br>
       <br>
     </footer>
