--- a/2viikontehtavat.html
+++ b/2viikontehtavat.html
@@ -8,7 +8,7 @@
 
     </script>
   </head>
-  <body class='body' background="image/code-background.jpg">
+  <body class='body' background="resources/images/code-background.jpg">
     <center><h1 style="color:lightgray; font-size:48px">Toisen viikon tehtävät</h1></center>
     <article class='article' id='one'>
     <h2>Numerot suuruusjärjestykseen</h2>
