--- a/3viikonensimmainen.html
+++ b/3viikonensimmainen.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="ehtolauseita.css">
-    <script type="text/javascript" src="silmukkalauseita.js">
+    <link rel="stylesheet" href="css/2viikontehtavat.css">
+    <script type="text/javascript" src="js/3viikonTehtavat.js">
 
     </script>
   </head>
-  <body>
-    <h1>Silmukka -harjoitustehtäviä maanantaiksi 24.8.2020 (1-5) sekä keskiviikoksi (6-11)</h1>
-    <h1>Löytyy myös Moodlesta viikolta 3</h1>
+    <body class='body' background="resources/images/code-background.jpg">
     <article class='vieri' id='yksi'>
     <h1>Tehtävä 1</h1>
     <p>Tee ohjelma, joka pyytää käyttäjältä parillista lukua
