--- a/3viikonensimmainen.html
+++ b/3viikonensimmainen.html
@@ -9,7 +9,7 @@
     </script>
   </head>
     <body class='body' background="resources/images/code-background.jpg">
-    <article class='vieri' id='yksi'>
+    <article class='article' id='one'>
     <h1>Tehtävä 1</h1>
     <p>Tee ohjelma, joka pyytää käyttäjältä parillista lukua
     ja tulostaa tämän jälkeen kaikki parilliset luvut siihen asti
@@ -20,7 +20,7 @@
       <div id="parilliset"></div>
     </form>
   </article>
-  <article  class='vieri' id='kaksi'>
+  <article  class='article' id='two'>
     <h1>Tehtävä 2</h1>
     <p>Kirjoita ohjelma, joka muuntaa käyttäjän antaman sanan salasanaksi
     siten, että laittaa joka toiseksi kirjaimeksi ison Ö-kirjaimen, eli
@@ -31,7 +31,7 @@
             <div id="salasana"></div>
     </form>
   </article>
-  <article  class='vieri' id='kolme'>
+  <article  class='article' id='tree'>
     <h1>Tehtävä 3</h1>
     <p>Kirjoita ohjelma, joka tarkastaa, onko antamassasi sanassa ö-kirjainta
     ja kirjoittaa vastaukseksi joko: on tai ei ole</p>
@@ -39,7 +39,7 @@
     <button type="button" name="button" onclick="tarkistaKirjain()">Onko ö-kirjainta</button>
     <div id="vastaus"></div>
   </article>
-  <article  class='vieri' id='nelja'>
+  <article  class='article' id='four'>
     <h1>Tehtävä 4</h1>
     <p>Kirjoita ohjelma, joka laskee annetun luvun kertoman<br> (esim: 4 -> 4*3*2*1 = 24)</p>
       <form class="" action="index.html" method="post">
@@ -48,7 +48,7 @@
             <div id="kertomaVastaus"></div>
       </form>
     </article>
-    <article  class='vieri' id='viisi'>
+    <article  class='article' id='five'>
     <h1>Tehtävä 5</h1>
       <p>Kirjoita ohjelma, joka tulostaa näytölle luvut 1-100, kuitenkin
       siten, että jos luku on 3:lla jaollinen, tulostetaan hip ja
@@ -57,19 +57,19 @@
     <button type="button" id="button" onclick="hipHeijaa()">Tulosta</button>
     <div id="lukujenTulostus"></div>
   </article>
-  <article  class='vieri' id='kuusi'>
+  <article  class='article' id='six'>
   <h1>Tehtävä 6</h1>
     <p>Kirjoita ohjelma, joka tulostaa 10 ensimmäistä numeroa</p>
   <button type="button" id="seiska" onclick="ekatKymmenen()">10 Ensimmäistä</button>
   <div id="lukujenTulostus10"></div>
 </article>
-<article  class='vieri' id='kasi'>
+<article  class='article' id='seven'>
 <h1>Tehtävä 7</h1>
   <p>Kirjoita ohjelma, joka laskee 10 ensimmäistä numeroa yhteen</p>
 <button type="button" id="button" onclick="yhteen()">Laske 10 ens. yhteen</button>
 <div id="lukujenTulostusY"></div>
 </article>
-<article  class='vieri' id='ysi'>
+<article  class='article' id='eight'>
 <h1>Tehtävä 8</h1>
   <p>Kirjoita ohjelma, joka kysyy käyttäjältä kahta lukua ja laskee ensimmäisen potenssiin toinen esim. 5 ja 2 = 5<sup>2</sup> = 25</p>
   <p>Anna korotettava luku: <input type="text" id="kor" value=""> </p>
@@ -77,7 +77,7 @@
 <button type="button" id="button" onclick="potenssi()">Laske</button>
 <div id="lukujenTulostusP"></div>
 </article>
-<article  class='vieri' id='viisi'>
+<article  class='article' id='nine'>
 <h1>Tehtävä 9</h1>
   <p>Kirjoita ohjelma, joka etsii annetusta luvuista suurimman ja pienimmän arvon</p>
   <p>Anna 1. luku: <input type="text" id="taulukko[0]" value=""> </p>
@@ -88,14 +88,14 @@
   <button type="button" id="button" onclick="etsiSuurinPienin()">Etsi suurin ja pienin</button>
   <div id="lukujenTulostusT"></div>
 </article>
-<article  class='vieri' id='kyba'>
+<article  class='article' id='ten'>
 <h1>Tehtävä 10</h1>
   <p>Muokataan salasalatehtävää siten, että se arpoo kirjaimen Ö:n sijasta</p>
   <p>Anna muokattava salasana:  <input type="text" id="salis" value="">
 <button type="button" id="button" onclick="muokkaaSalasana()">Muunna salasanaksi</button>
 <div id="lukujenTulostusS"></div>
 </article>
-<article  class='vieri' id='ykst'>
+<article  class='article' id='eleven'>
 <h1>Tehtävä 11</h1>
   <p>Tee ohjelma, joka pyytää käyttäjältä kahta numeroa (jälkimmäisen tulee olla isompi) ja tulostaa tuolla välillä parilliset ja parittomat numerot sekä niiden summat</p>
   <p>Anna pienempi numero:  <input type="text" id="pnro" value=""></p>
