--- a/3viikonensimmainen.html
+++ b/3viikonensimmainen.html
@@ -103,5 +103,12 @@
 <button type="button" id="button" onclick="llisettomat()">näytä parilliset ja parittomat erikseen sekä niiden summa</button>
 <div id="lukujenTulostusPari"></div>
 </article>
+  <footer class='footer'>
+    <br>
+    <br>
+    <p style="color:lightgray;">Kolmannen viikon ensimmäiset tehtävät by MPO</p>
+    <br>
+    <br>
+  </footer>
   </body>
 </html>
