--- a/3viikonensimmainen.html
+++ b/3viikonensimmainen.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="css/2viikontehtavat.css">
-    <script type="text/javascript" src="js/3viikonTehtavat.js">
+    <script type="text/javascript" src="js/3viikonensimmainen.js">
 
     </script>
   </head>
