--- a/3viikonensimmainen.html
+++ b/3viikonensimmainen.html
@@ -9,8 +9,9 @@
     </script>
   </head>
     <body class='body' background="resources/images/code-background.jpg">
+    <center><h1 style="color:lightgray; font-size:48px">Kolmannen viikon ensimmäiset tehtävät</h1></center>
     <article class='article' id='one'>
-    <h1>Tehtävä 1</h1>
+    <h2>Tehtävä 1</h2>
     <p>Tee ohjelma, joka pyytää käyttäjältä parillista lukua
     ja tulostaa tämän jälkeen kaikki parilliset luvut siihen asti
     poislukien 0:n</p>
@@ -21,7 +22,7 @@
     </form>
   </article>
   <article  class='article' id='two'>
-    <h1>Tehtävä 2</h1>
+    <h2>Tehtävä 2</h2>
     <p>Kirjoita ohjelma, joka muuntaa käyttäjän antaman sanan salasanaksi
     siten, että laittaa joka toiseksi kirjaimeksi ison Ö-kirjaimen, eli
     jos sana on Kaappi --> KÖaÖaÖpÖpÖiÖ </p>
@@ -32,7 +33,7 @@
     </form>
   </article>
   <article  class='article' id='tree'>
-    <h1>Tehtävä 3</h1>
+    <h2>Tehtävä 3</h2>
     <p>Kirjoita ohjelma, joka tarkastaa, onko antamassasi sanassa ö-kirjainta
     ja kirjoittaa vastaukseksi joko: on tai ei ole</p>
     <p>Anna sana: <input type="text" id="tsana" value=""></p>
@@ -40,7 +41,7 @@
     <div id="vastaus"></div>
   </article>
   <article  class='article' id='four'>
-    <h1>Tehtävä 4</h1>
+    <h2>Tehtävä 4</h2>
     <p>Kirjoita ohjelma, joka laskee annetun luvun kertoman<br> (esim: 4 -> 4*3*2*1 = 24)</p>
       <form class="" action="index.html" method="post">
         <p>Anna luku, josta lasketaan kertoma: <input type="text" id="kertoma" value=""></p>
@@ -49,7 +50,7 @@
       </form>
     </article>
     <article  class='article' id='five'>
-    <h1>Tehtävä 5</h1>
+    <h2>Tehtävä 5</h2>
       <p>Kirjoita ohjelma, joka tulostaa näytölle luvut 1-100, kuitenkin
       siten, että jos luku on 3:lla jaollinen, tulostetaan hip ja
     viidellä jaollinen tulostetaan heijaa ja jos sekä viidellä että kolmella
@@ -58,19 +59,19 @@
     <div id="lukujenTulostus"></div>
   </article>
   <article  class='article' id='six'>
-  <h1>Tehtävä 6</h1>
+  <h2>Tehtävä 6</h2>
     <p>Kirjoita ohjelma, joka tulostaa 10 ensimmäistä numeroa</p>
   <button type="button" id="seiska" onclick="ekatKymmenen()">10 Ensimmäistä</button>
   <div id="lukujenTulostus10"></div>
 </article>
 <article  class='article' id='seven'>
-<h1>Tehtävä 7</h1>
+<h2>Tehtävä 7</h2>
   <p>Kirjoita ohjelma, joka laskee 10 ensimmäistä numeroa yhteen</p>
 <button type="button" id="button" onclick="yhteen()">Laske 10 ens. yhteen</button>
 <div id="lukujenTulostusY"></div>
 </article>
 <article  class='article' id='eight'>
-<h1>Tehtävä 8</h1>
+<h2>Tehtävä 8</h2>
   <p>Kirjoita ohjelma, joka kysyy käyttäjältä kahta lukua ja laskee ensimmäisen potenssiin toinen esim. 5 ja 2 = 5<sup>2</sup> = 25</p>
   <p>Anna korotettava luku: <input type="text" id="kor" value=""> </p>
   <p>Anna potenssi: <input type="text" id="pot" value=""> </p>
@@ -78,7 +79,7 @@
 <div id="lukujenTulostusP"></div>
 </article>
 <article  class='article' id='nine'>
-<h1>Tehtävä 9</h1>
+<h2>Tehtävä 9</h2>
   <p>Kirjoita ohjelma, joka etsii annetusta luvuista suurimman ja pienimmän arvon</p>
   <p>Anna 1. luku: <input type="text" id="taulukko[0]" value=""> </p>
   <p>Anna 2. luku: <input type="text" id="taulukko[1]" value=""> </p>
@@ -89,14 +90,14 @@
   <div id="lukujenTulostusT"></div>
 </article>
 <article  class='article' id='ten'>
-<h1>Tehtävä 10</h1>
+<h2>Tehtävä 10</h2>
   <p>Muokataan salasalatehtävää siten, että se arpoo kirjaimen Ö:n sijasta</p>
   <p>Anna muokattava salasana:  <input type="text" id="salis" value="">
 <button type="button" id="button" onclick="muokkaaSalasana()">Muunna salasanaksi</button>
 <div id="lukujenTulostusS"></div>
 </article>
 <article  class='article' id='eleven'>
-<h1>Tehtävä 11</h1>
+<h2>Tehtävä 11</h2>
   <p>Tee ohjelma, joka pyytää käyttäjältä kahta numeroa (jälkimmäisen tulee olla isompi) ja tulostaa tuolla välillä parilliset ja parittomat numerot sekä niiden summat</p>
   <p>Anna pienempi numero:  <input type="text" id="pnro" value=""></p>
   <p>Anna isompi numero:  <input type="text" id="inro" value=""></p>
