--- a/3viikontoinen.html
+++ b/3viikontoinen.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="css/2viikontehtavat.css">
     <title></title>
   </head>
-  <body>
-    <h1>Kolmannen viikon toiset tehtävät</h1>
+  <body class='body' background="resources/images/code-background.jpg">
+  <center><h1 style="color:lightgray; font-size:48px">Kolmannen viikon toiset tehtävät</h1></center>
     <article class='article' id='one'>
     <h2>Tehtävä 1</h2>
     <p>Tee ohjelma, jolle voi syöttää Scrabble-pelin sanan ja ohjelma laskee kirjain pisteet seuraavasti</p>
