--- a/3viikontoinen.html
+++ b/3viikontoinen.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <script type="text/javascript" src="js/3viikontoinen.js"></script>
     <link rel="stylesheet" href="css/2viikontehtavat.css">
-    <title></title>
+    <title>Kolmannen viikon toiset tehtävät 2021</title>
   </head>
   <body class='body' background="resources/images/code-background.jpg">
   <center><h1 style="color:lightgray; font-size:48px">Kolmannen viikon toiset tehtävät</h1></center>
