--- a/2viikon2tehtavat.html
+++ b/2viikon2tehtavat.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/tyyli.css">
-    <script type="text/javascript" src="JS/koodi.js"></script>
+    <link rel="stylesheet" href="css/tyyli.css">
+    <script type="text/javascript" src="js/koodi.js"></script>
     <title>2 viikon toiset tehtävät</title>
   </head>
   <body>
